bug 5: adicionado text-align: center na tag td

--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -106,6 +106,9 @@ div:last-child {
 table {
     width: 60%;
 }
+td {
+    text-align: center;
+}
 
 td button {
     background-color: #fadf63;
